--- a/derash/static/styles/owner_restaurant.css
+++ b/derash/static/styles/owner_restaurant.css
@@ -64,119 +64,6 @@
       80%{background-position:0%  50%, 50%  50%,100% 100%}
   }
 
-.popup-cont {
-    position: relative;
-    top: -50px;
-    width: 100%;
-}
-
-.popup-edit-restaurant, .popup-new-dish {
-    visibility: hidden;
-    position: fixed;
-    width: 30%;
-    top: 64px;
-    left: 35%;
-    background: #112121;;
-    color: #fff;
-    padding: 30px;
-    border: 2px solid rgb(66, 255, 151);
-    border-radius: 20px;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* .new-restaurant-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-.new-restaurant-form {
-
-} */
-
-form {
-    padding: 8px 0px;
-    border-radius: 30px;
-
-    background-color: #112121;
-}
-
-legend {
-    text-align: center;
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 25px;
-}
-
-form fieldset {
-    display: flex;
-    flex-flow: column;
-    align-items: stretch;
-    gap: 15px;
-}
-
-.field {
-    display: flex;
-    flex-flow: column;
-    gap: 5px;
-}
-
-.field label {
-    font-weight: 700;
-}
-
-.field input, .field textarea {
-    font-family: "Quicksand" sans-serif;
-    margin-top: 5px;
-    padding: 2px 0;
-    font-size: 16px;
-    background-color: inherit;
-    color: rgb(66, 255, 151);
-    /* border: 1px solid black;
-    border-radius: 15px; */
-    border: none;
-    outline: none;
-    border-bottom: 1px solid rgb(66, 255, 151);
-}
-
-
-input[type='text'], textarea {
-    font-family: "Quicksand";
-}
-
-.submit input {
-    width: 100%;
-    padding: 15px 30px;
-    margin-top: 10px;
-    outline: none;
-    background-color: #112121;
-    border: 2px solid rgb(66, 255, 151);
-    border-radius: 20px;
-    color: rgb(66, 255, 151);
-    font-family: "Quicksand" sans-serif;
-    font-weight: 700;
-}
-
-.submit input:hover {
-    background-color: rgb(66, 255, 151);
-    padding: 14px 29px;
-    color: #112121;
-    cursor: pointer;
-}
-
-.cancel {
-    color:rgb(66, 255, 151);
-    font-size: 20px;
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
-}
-
 .intro {
     display: flex;
     justify-content: space-between;
@@ -191,17 +78,18 @@ input[type='text'], textarea {
     color: rgb(66, 255, 151);
 }
 
-.edit-restaurant, .new-dish, .edit-dish {
+.edit-restaurant, .new-dish, .edit-dish, .reviews-toggle {
     font-family: "Quicksand" sans-serif;
     outline: none;
-    padding: 10px 20px;
+    font-size: 500;
+    padding: 8px 20px;
     border: none;
     background-color: rgb(8, 138, 66);
     color: #fff;
     border-radius: 10px;
 }
 
-.edit-restaurant:hover, .new-dish:hover, .edit-dish:hover {
+.edit-restaurant:hover, .new-dish:hover, .edit-dish:hover, .reviews-toggle:hover {
     background-color: rgb(27, 185, 98);
 }
 
@@ -233,8 +121,163 @@ input[type='text'], textarea {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 
 div .popup-new-dish {
     width: 40%;
+}
+
+.dishes {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+.dish {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    background-color: #112121;
+    border: 2px solid rgb(66, 255, 151);
+}
+
+.dish-main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dish-intro {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.dish-intro h2, .reviews-intro h2 {
+    color: rgb(66, 255, 151);
+}
+
+.dish-img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.dish-price {
+    font-size: 20px;
+    color: rgb(66, 255, 151);
+}
+
+a {
+    display: inline-block;
+}
+
+.reviews-intro {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+}
+
+.reviews {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+button.reviews-toggle {
+    font-family: "Quicksand";
+    padding: 10px 20px;
+}
+
+.review {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-bottom: 1px solid rgb(66, 255, 151);
+    padding: 10px;
+}
+
+.review-headline {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.reviewer {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.reviewer-img {
+    width: 50px;
+    height: 50px;
+}
+
+.review-headline h3, .review-headline span {
+    color: rgb(66, 255, 151);
+    font-weight: 500;
+}
+
+.section-title {
+    font-size: 28px;
+    color: rgb(66, 255, 151);
+    border-bottom: 1px solid #fff;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+}
+
+.orders {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.order {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background-color: #112121;
+    border: 2px solid rgb(66, 255, 151);
+    gap: 20px;
+}
+
+.order-headline {
+    display: flex;
+    justify-content: space-between;
+    color: rgb(66, 255, 151);
+    border-bottom: 1px solid rgb(66, 255, 151);
+}
+
+.order-customer-name {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.order-time {
+    color: rgb(66, 255, 151);
+}
+
+.order-body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.order-text {
+    color: #fff;
+}
+
+.awaiting-driver {
+    color: rgb(66, 255, 151);
+}
+
+.order-license-num {
+    color: rgb(66, 255, 151);
 }
