--- a/derash/templates/customer_restaurant.html
+++ b/derash/templates/customer_restaurant.html
@@ -38,6 +38,17 @@
             </div>
         {% endfor %}
     </div>
+    <div class="restaurant-reviews">
+        <div class="reviews-intro">
+            <h2>Reviews</h2>
+            <button class="show reviews-toggle">Show</button>
+        </div>
+        <div class="new-review">
+            <textarea name="Leave a Review" id="make-new-review"></textarea>
+            <button class="make-review"><i class="fa-solid fa-plus"></i> New</button>
+        </div>
+        <div class="reviews"></div>
+    </div>
 </div>
 <footer class="restaurant-footer"></footer>
 {% endblock main_content %}
