Add more views for the driver

--- a/derash/static/styles/common.css
+++ b/derash/static/styles/common.css
@@ -98,17 +98,22 @@
     border-radius: 5px;
 }
 
-.flash, .flash-info {
+.flash.success {
+    background-color: rgb(158, 255, 215);
+    border-color: rgb(57, 245, 142);
+}
+
+.flash.info {
     background-color: rgb(171, 171, 245);
     border-color: rgb(172, 172, 255);
 }
 
-.flash, .flash-warning {
+.flash.warning {
     background-color: rgb(250, 243, 183);
     border-color: yellow;
 }
 
-.flash, .flash-error {
+.flash.error {
     background-color: rgb(255, 172, 161);
     border-color: red;
 }
