--- a/derash/templates/logged_in_home.html
+++ b/derash/templates/logged_in_home.html
@@ -20,7 +20,7 @@
         <h1 class="app-name">DERASH</h1>
         <div class="links">
             <a href="{{ url_for('home') }}" class="nav-link">Home</a>
-            <a href="#" class="nav-link">About us</a>
+            <a href="#" class="nav-link">About</a>
             <a href="#" class="nav-link">Contact</a>
             <a href="{{ url_for('logout') }}" class="nav-link">Log out</a>
             <a href="#" class="nav-link">Account</a>
