--- a/derash/templates/layout.html
+++ b/derash/templates/layout.html
@@ -23,7 +23,7 @@
             </div>
             <div class="links">
                 <a href="{{ url_for('home') }}" class="home-link header-link">Home</a>
-                <a href="#" class="home-link header-link">About us</a>
+                <a href="#" class="home-link header-link">About</a>
                 <a href="#"  class="home-link header-link">Contact</a>
                 {% if current_user.is_authenticated %}
                     <a href="{{ url_for('logout') }}" class="home-link header-link">Log out</a>
